// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartLine 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-chart"
    style="height: 100%; width: 100%; pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    >
      <g
        clip-path="url(#victory-clip-2)"
        style="height: 100%; width: 100%;"
      >
        <defs>
          <clippath
            id="victory-clip-2"
          >
            <rect
              height="200"
              vector-effect="non-scaling-stroke"
              width="350"
              x="50"
              y="50"
            />
          </clippath>
        </defs>
        <path
          d="M50,250L57,246L64,242L71,238L78,234L85,230L92,226L99,222L106,218L113,214.00000000000003L120,210L127,206L134,202L141,198L148,194L155,190L162,185.99999999999997L169,181.99999999999997L176,178L183,174L190,170L197,166.00000000000003L204,162L211,158L218,154L225,150L232,146L239,142L246.00000000000003,138L252.99999999999997,134L260,130L267,126L274,122L281,117.99999999999999L288,113.99999999999999L295,109.99999999999999L302,106L309,102L316,98L323,94L330,89.99999999999999L337,85.99999999999999L344,82L351,78L358,74L365,70L372,65.99999999999999L379,61.999999999999986L386,58.00000000000001L393,54.00000000000001L400,50"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-v5-chart-line--data--Fill, transparent); stroke: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c); pointer-events: stroke; opacity: 1; stroke-width: 2;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartLine 2`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-chart"
    style="height: 100%; width: 100%; pointer-events: none; position: relative;"
  >
    <svg
      height="300"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 300"
      width="450"
    >
      <g
        clip-path="url(#victory-clip-4)"
        style="height: 100%; width: 100%;"
      >
        <defs>
          <clippath
            id="victory-clip-4"
          >
            <rect
              height="200"
              vector-effect="non-scaling-stroke"
              width="350"
              x="50"
              y="50"
            />
          </clippath>
        </defs>
        <path
          d="M50,250L57,246L64,242L71,238L78,234L85,230L92,226L99,222L106,218L113,214.00000000000003L120,210L127,206L134,202L141,198L148,194L155,190L162,185.99999999999997L169,181.99999999999997L176,178L183,174L190,170L197,166.00000000000003L204,162L211,158L218,154L225,150L232,146L239,142L246.00000000000003,138L252.99999999999997,134L260,130L267,126L274,122L281,117.99999999999999L288,113.99999999999999L295,109.99999999999999L302,106L309,102L316,98L323,94L330,89.99999999999999L337,85.99999999999999L344,82L351,78L358,74L365,70L372,65.99999999999999L379,61.999999999999986L386,58.00000000000001L393,54.00000000000001L400,50"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-v5-chart-line--data--Fill, transparent); stroke: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c); pointer-events: stroke; opacity: 1; stroke-width: 2;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="300"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 300"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-chart"
    style="height: 100%; width: 100%; user-select: none; pointer-events: none; position: relative;"
  >
    <svg
      height="200"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 200 200"
      width="200"
    >
      <g>
        <g
          clip-path="url(#victory-clip-6)"
          style="height: 100%; width: 100%; user-select: none;"
        >
          <defs>
            <clippath
              id="victory-clip-6"
            >
              <rect
                height="100"
                vector-effect="non-scaling-stroke"
                width="100"
                x="50"
                y="50"
              />
            </clippath>
          </defs>
          <path
            d="M50,138.88888888888886L83.33333333333334,127.77777777777779L116.66666666666667,94.44444444444443L150,116.66666666666669"
            role="presentation"
            shape-rendering="auto"
            style="fill: none; stroke: var(--pf-v5-chart-theme--blue--ColorScale--100, #06c); pointer-events: stroke; width: 3px; opacity: 1; stroke-width: 2;"
          />
        </g>
        <g
          clip-path="url(#victory-clip-7)"
          style="height: 100%; width: 100%; user-select: none;"
        >
          <defs>
            <clippath
              id="victory-clip-7"
            >
              <rect
                height="100"
                vector-effect="non-scaling-stroke"
                width="100"
                x="50"
                y="50"
              />
            </clippath>
          </defs>
          <path
            d="M50,127.77777777777779L83.33333333333334,138.88888888888886L116.66666666666667,72.22222222222223L150,105.55555555555557"
            role="presentation"
            shape-rendering="auto"
            style="fill: none; stroke: var(--pf-v5-chart-theme--blue--ColorScale--200, #8bc1f7); pointer-events: stroke; width: 3px; opacity: 1; stroke-width: 2;"
          />
        </g>
        <g
          clip-path="url(#victory-clip-8)"
          style="height: 100%; width: 100%; user-select: none;"
        >
          <defs>
            <clippath
              id="victory-clip-8"
            >
              <rect
                height="100"
                vector-effect="non-scaling-stroke"
                width="100"
                x="50"
                y="50"
              />
            </clippath>
          </defs>
          <path
            d="M50,116.66666666666669L83.33333333333334,105.55555555555557L116.66666666666667,50L150,94.44444444444443"
            role="presentation"
            shape-rendering="auto"
            style="fill: none; stroke: var(--pf-v5-chart-theme--blue--ColorScale--300, #002f5d); pointer-events: stroke; width: 3px; opacity: 1; stroke-width: 2;"
          />
        </g>
        <g
          clip-path="url(#victory-clip-9)"
          style="height: 100%; width: 100%; user-select: none;"
        >
          <defs>
            <clippath
              id="victory-clip-9"
            >
              <rect
                height="100"
                vector-effect="non-scaling-stroke"
                width="100"
                x="50"
                y="50"
              />
            </clippath>
          </defs>
          <path
            d="M50,116.66666666666669L83.33333333333334,116.66666666666669L116.66666666666667,61.111111111111114L150,72.22222222222223"
            role="presentation"
            shape-rendering="auto"
            style="fill: none; stroke: var(--pf-v5-chart-theme--blue--ColorScale--400, #519de9); pointer-events: stroke; width: 3px; opacity: 1; stroke-width: 2;"
          />
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: var(--pf-v5-chart-axis--axis--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--axis--Fill, transparent); stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="50"
          x2="150"
          y1="150"
          y2="150"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="50"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-0"
            x="50"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="50"
            >
              1.0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="66.66666666666667"
            x2="66.66666666666667"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-1"
            x="66.66666666666667"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="66.66666666666667"
            >
              1.5
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="83.33333333333334"
            x2="83.33333333333334"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-2"
            x="83.33333333333334"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="83.33333333333334"
            >
              2.0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="100"
            x2="100"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-3"
            x="100"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="100"
            >
              2.5
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="116.66666666666667"
            x2="116.66666666666667"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-4"
            x="116.66666666666667"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="116.66666666666667"
            >
              3.0
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="133.33333333333334"
            x2="133.33333333333334"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-5"
            x="133.33333333333334"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="133.33333333333334"
            >
              3.5
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="150"
            x2="150"
            y1="150"
            y2="155"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-1-tickLabels-6"
            x="150"
            y="176.97"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="middle"
              x="150"
            >
              4.0
            </tspan>
          </text>
        </g>
      </g>
      <g
        role="presentation"
      >
        <line
          role="presentation"
          shape-rendering="auto"
          style="stroke: var(--pf-v5-chart-axis--axis--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--axis--Fill, transparent); stroke-width: 1; stroke-linecap: round; stroke-linejoin: round;"
          vector-effect="non-scaling-stroke"
          x1="50"
          x2="50"
          y1="50"
          y2="150"
        />
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="45"
            y1="127.77777777777779"
            y2="127.77777777777779"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-2-tickLabels-0"
            x="35"
            y="132.7477777777778"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="end"
              x="35"
            >
              2
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="45"
            y1="105.55555555555557"
            y2="105.55555555555557"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-2-tickLabels-1"
            x="35"
            y="110.52555555555557"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="end"
              x="35"
            >
              4
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="45"
            y1="83.33333333333334"
            y2="83.33333333333334"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-2-tickLabels-2"
            x="35"
            y="88.30333333333334"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="end"
              x="35"
            >
              6
            </tspan>
          </text>
        </g>
        <g
          role="presentation"
        >
          <line
            role="presentation"
            shape-rendering="auto"
            style="stroke: var(--pf-v5-chart-axis--tick--stroke--Color, #d2d2d2); fill: var(--pf-v5-chart-axis--tick--Fill, transparent); size: 5px; stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
            vector-effect="non-scaling-stroke"
            x1="50"
            x2="45"
            y1="61.111111111111114"
            y2="61.111111111111114"
          />
          <text
            direction="inherit"
            dx="0"
            id="chart-axis-2-tickLabels-3"
            x="35"
            y="66.08111111111111"
          >
            <tspan
              dx="0"
              dy="0"
              style="font-family: \\"RedHatText\\",helvetica,arial,sans-serif; font-size: 14px; letter-spacing: normal; padding: 10px; stroke: var(--pf-v5-chart-global--label--stroke, transparent); fill: var(--pf-v5-chart-axis--tick-label--Fill, #4f5255);"
              text-anchor="end"
              x="35"
            >
              8
            </tspan>
          </text>
        </g>
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="200"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 200 200"
        width="200"
      />
    </div>
  </div>
</DocumentFragment>
`;
